...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
...
            android:text="@string/textviewkategorije"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listKategorije"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_gravity="center">

...
