...
        android:id="@+id/mapaDeaktivacija"
        android:orderInCategory="100"
        android:title="Mapa: OFF"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_title"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="withText|ifRoom"
        />

...
